2005-01-14 Dario Massarin <nekkar@libero.it>
        * Implement delay in the transfer class. We don't need this function
        to be abstract virtual. Remove its partial implementation from the 
        TransferKio class.
        * Now the scheduler sets a small delay (5 seconds) when necessary
        (with broken urls) to the transfers. This is enough to allow the
        scheduler to skip them when downloading and to go on downloading the
        non broken urls. Nice behaviour, IMHO.

2005-01-14 Dario Massarin <nekkar@libero.it>
        * Correct stupid bug that caused wrong updates of the percent field 
        in the group object.

2005-01-13 Dario Massarin <nekkar@libero.it>
        * Reorganization of the directories. Some files have been renamed.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Fixed nasty bug in transferKio.cpp which produced a crash every time
        a download was aborted.
        * Now also the scheduler is a TransferInterrogator. This means that 
        I have removed the transferStatusChanged signal and now only the
        transferChanged signal is emitted from the transfer object :-)

2004-11-05 Dario Massarin <nekkar@libero.it>
        * New system tray icon effects. This has been realized looking at the 
        amarok code. In the future, when other things will be in place, I will
        surely paint an icon filled according to the current downloading progress.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Delayed initialization. This should speed up the application startup
        especially when the user has lots of transfers.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Cleanups all over the code.
        
        * interrogator.h: Now we have this new file that defines the two classes
        TransferInterrogator and GroupInterrogator. If a class wants to interrogate
        a transfer or a group object it should reimplement them.
        